Fixed URI issues, MessageContext demarshalling issues and classloading issues
git-svn-id: https://svn.apache.org/repos/asf/incubator/openejb/trunk@445309 13f79535-47bb-0310-9956-ffa450edef68